<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.chemistryquizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/picture"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linear">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:id="@+id/score"
            style="@style/score"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoreNum"
            android:id="@+id/scoreNum"
            style="@style/score" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrong"
            android:id="@+id/wrong"
            style="@style/score" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wrongNum"
            android:id="@+id/wrongNum"
            style="@style/score" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/wrongNum"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                style="@style/ques"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Carbon dioxide formula"
                android:inputType="textCapCharacters"
                style="@style/ans"
                android:id="@+id/ans1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                style="@style/ques"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans2">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Titanium"
                    style="@style/ans"
                    android:id="@+id/ans2a"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Magnesium"
                    style="@style/ans"
                    android:id="@+id/ans2b"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Aluminium"
                    style="@style/ans"
                    android:id="@+id/ans2c"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lithium"
                    style="@style/ans"
                    android:id="@+id/ans2d"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                style="@style/ques"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sodium bicarbonate"
                style="@style/ans"
                android:id="@+id/ans3a"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NaHCO3"
                style="@style/ans"
                android:id="@+id/ans3b"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sodium perborate"
                style="@style/ans"
                android:id="@+id/ans3c"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="NaBO3"
                style="@style/ans"
                android:id="@+id/ans3d"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                style="@style/ques"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Lead formula"
                android:inputType="textCapWords"
                style="@style/ans"
                android:id="@+id/ans4"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                style="@style/ques"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ans5">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Hydrogen"
                    style="@style/ans"
                    android:id="@+id/ans5a"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Nitrogen"
                    style="@style/ans"
                    android:id="@+id/ans5b"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Carbon"
                    style="@style/ans"
                    android:id="@+id/ans5c"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Oxygen"
                    style="@style/ans"
                    android:id="@+id/ans5d"/>
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                style="@style/ques"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sodium tetraborate decahydrate"
                style="@style/ans"
                android:id="@+id/ans6a"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Na2B4O7.10 H2O"
                style="@style/ans"
                android:id="@+id/ans6b"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="hydrogen peroxide"
                style="@style/ans"
                android:id="@+id/ans6c"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="H2O2"
                style="@style/ans"
                android:id="@+id/ans6d"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="submit answers"
                android:layout_gravity="center"
                android:onClick="submitAnswer"
                android:id="@+id/btnSubmit"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
